Bug 495889 - Audio doesn't show up in posts
Summary: Audio doesn't show up in posts
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-06 17:56 UTC by Joshua Goins
Modified: 2024-12-26 22:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua Goins 2024-11-06 17:56:35 UTC
This should be easy to add, but I keep forgetting to
Comment 1 Joshua Goins 2024-12-26 22:19:32 UTC
Git commit 4639e3d2f81a6fec4584b7baa89983fab3153cb8 by Joshua Goins.
Committed on 26/12/2024 at 21:46.
Pushed by redstrate into branch 'master'.

Add support for viewing audio attachments

It's a bit basic at the moment, but way better than it being a blank
spot in the timeline.

M  +1    -0    src/CMakeLists.txt
M  +49   -2    src/content/ui/PostDelegate/AttachmentGrid.qml
M  +2    -0    src/content/ui/PostDelegate/AttachmentMenu.qml
A  +147  -0    src/content/ui/PostDelegate/AudioAttachment.qml     [License: GPL(v3.0+)]
M  +1    -0    src/timeline/attachment.cpp
M  +1    -0    src/timeline/attachment.h

https://invent.kde.org/network/tokodon/-/commit/4639e3d2f81a6fec4584b7baa89983fab3153cb8