Add support for viewing audio attachments

It's a bit basic at the moment, but way better than it being a blank
spot in the timeline.

BUG: 495889